
AGI Changes
-----------
  * Added SPEECH commands for speech recognition. A complete listing can be found
     using agi show.
  * If app_stack is loaded, GOSUB is a native AGI command that may be used to
    invoke subroutines in the dialplan.  Note that calling EXEC with Gosub
    does not behave as expected; the native command needs to be used, instead.

Logger changes
--------------
  * Added rotatestrategy option to logger.conf, along with two new options:
     "timestamp" which will use the time to name the logger files instead of
     sequence number; and "rotate", which rotates the names of the log files,
     similar to the way syslog rotates files.
  * Added exec_after_rotate option to logger.conf, which allows a system
     command to be run after rotation.  This is primarily useful with
     rotatestrategy=rotate, to allow a limit on the number of log files kept
     and to ensure that the oldest log file gets deleted.
  * Added realtime support for the queue log

Call Detail Records 
-------------------
  * The cdr_manager module has a [mappings] feature, like cdr_custom,
    to add fields to the manager event from the CDR variables.
  * Added cdr_adaptive_odbc, a new module that adapts to the structure of your
     backend database CDR table.  Specifically, additional, non-standard
     columns are supported, merely by setting the corresponding CDR variable in
     your dialplan.  In addition, you may alias any column to another name (for
     example, if you want the 'src' CDR variable to be column 'ANI' in the DB,
     simply "alias src => ANI" in the configuration file).  Records may be
     posted to more than one backend, simply by specifying multiple categories
     in the configuration file.  And finally, you may filter which CDRs get
     posted to each backend, by specifying a filter (which the record must
     match) for the particular category.  Filters are additive (meaning all
     rules must match to post that CDR).